закончил пример Users

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,22 @@ header, footer{
 .active a{
     color: tomato;
 }
+nav {
+    /* position: fixed; */
+    /* max-width: 250px; */
+}
+
+
+@media screen and (min-width: 1200px){
+    nav{
+        position: fixed;
+        max-width: 200px;
+    }
+
+}
+
+/* @media screen and (min-width: 900px) {
+    article {
+      padding: 1rem 3rem;
+    }
+  } */
