--- a/src/app/ch5-Forms/lesson-1/parent-1.component.html
+++ b/src/app/ch5-Forms/lesson-1/parent-1.component.html
@@ -2,7 +2,7 @@
 <!--  -->
 <!-- ИМЕНА переманных каторые связанны с ngModel должны во всх формах быть уникальны  -->
 <!--  -->
-<div class="border">
+<div class="border mb-3">
     <h3>ngModel for Form</h3>
     <div class="form-group">
         <label>Название модели</label>
