--- a/src/app/ch5-Forms/lesson-3/parent-3.component.html
+++ b/src/app/ch5-Forms/lesson-3/parent-3.component.html
@@ -1,4 +1,4 @@
-<div class="border">
+<div class="border mb-3">
     <!-- Спомощью ngForm  -->
     <h3>Спомощью ngForm Уже пользуемся тегом form</h3>
     <form #myForm='ngForm' (ngSubmit)='onSubmit(myForm)'>
