--- a/src/app/ch5-Forms/lesson-4/parent-4.component.html
+++ b/src/app/ch5-Forms/lesson-4/parent-4.component.html
@@ -1,4 +1,4 @@
-<div class="border">
+<div class="border mb-3">
     <!--Reactive Forms  -->
     <h3>Reactive Forms</h3>
     <form [formGroup]="myFormGroup" (ngSubmit)='ReactiveFormSubmit()'>
