--- a/src/app/ExampleModule/ExampleUsers/ExampleCardUser/example-card-user.comp.html
+++ b/src/app/ExampleModule/ExampleUsers/ExampleCardUser/example-card-user.comp.html
@@ -1,10 +1,10 @@
-<div appHover class="card   mb-5" style="width: 15rem;">
+<div appHover class="card  mt-3 " style="width: 15rem;">
     <img src="{{user.picture}}" class="card-img-top" alt="">
-    <div class="card-body" >
+    <div class="card-body d-flex flex-column " >
         <h5 class="card-title"  [ngClass]="{'marked':isMarked}">
             {{user.name | uppercase}}
         </h5>
-        <p class="card-text" style="height: 130px;">{{user.location}}</p>
-        <button  class="btn btn-primary" (click)="onClick()">Marke</button>
+        <p class="card-text">{{user.location}}</p>
+        <button  class="btn btn-primary align-self-center" (click)="onClick()">Отметить</button>
     </div>
 </div>
