--- a/src/app/ch5-Forms/lesson-2/parent-2.component.html
+++ b/src/app/ch5-Forms/lesson-2/parent-2.component.html
@@ -1,4 +1,4 @@
-<div class="border">
+<div class="border mb-3">
     <h3>ngModel + Валидация</h3>
     <div class="form-group">
         <label for="">Name</label>
