--- a/src/app/ExampleModule/ExampleUsers/ExampleCardUser/example-card-user.comp.css
+++ b/src/app/ExampleModule/ExampleUsers/ExampleCardUser/example-card-user.comp.css
@@ -1,17 +1,19 @@
-.marked{
-    font-weight: bold;
-    color: tomato;
+.marked {
+  font-weight: bold;
+  color: tomato;
 }
 
-.hovered{
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    transition:   .5s  all ;
-    z-index: 10;
+.hovered {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: 0.5s all;
+  z-index: 10;
 }
-.card{
-    max-height: 480px;
+.card {
+  width: 15rem;
+  min-height: 480px;
+  margin-bottom: 15px;
 }
-.card-text{
-    min-height: 130px;
+.card-text {
+  flex-grow: 1;
 }
