--- a/src/app/ExampleModule/ExampleUsers/ExampleCardUser/example-card-user.comp.html
+++ b/src/app/ExampleModule/ExampleUsers/ExampleCardUser/example-card-user.comp.html
@@ -1,4 +1,4 @@
-<div appHover class="card  mt-3 " style="width: 15rem;">
+<div appHover class="card  mt-3 " >
     <img src="{{user.picture}}" class="card-img-top" alt="">
     <div class="card-body d-flex flex-column " >
         <h5 class="card-title"  [ngClass]="{'marked':isMarked}">
