--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,10 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class=" col-12 col-md-4 col-sm-12 ">
+    <div class="col-4  ">
       <nav appUpmenu>
         <ol>
-          <li
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
             <a routerLink="">Введение в Angular 8</a>
           </li>
           <li routerLinkActive="active">
@@ -22,13 +19,10 @@
             <a routerLink="/chapter4">Сервисы и dependency injection</a>
           </li>
           <li routerLinkActive="active">
-            <a routerLink="/chapter5"
-              >Работа с формами Модуль FormsModule и директива NgModel</a
-            >
+            <a routerLink="/chapter5">Работа с формами Модуль FormsModule и директива NgModel</a>
           </li>
           <li routerLinkActive="active">
-            <a routerLink="/chapter6"
-              >HTTP и взаимодействие с сервером HttpClient и отправка запросов
+            <a routerLink="/chapter6">HTTP и взаимодействие с сервером HttpClient и отправка запросов
             </a>
           </li>
           <li routerLinkActive="active">
@@ -37,32 +31,24 @@
           <li routerLinkActive="active">
             <a routerLink="/pipes">Pipes </a>
           </li>
-          <li routerLinkActive="active">
-            <a routerLink="/myexample">Мои примеры </a>
+          <li >
+            <span>Мои примеры</span>
+            <ul>
+              <li routerLinkActive="active">
+                <a routerLink="/exampleUsers">Users</a>
+              </li>
+              <li routerLinkActive="active">
+                <a routerLink="/exampleProductList">Product List</a>
+              </li>
+            </ul>
           </li>
         </ol>
       </nav>
     </div>
-    <div class="col col-12  col-xl-10 ">
+    <div class="col-8  ">
       <router-outlet></router-outlet>
     </div>
   </div>
 </div>
 
 <footer></footer>
-
-<ul>
-  <li
-    routerLink="/myexample"
-    routerLinkActive="active"
-    routerLink="/myexample"
-    routerLink="/myexample"
-  >
-    item1
-  </li>
-  <li>item2</li>
-  <li>item3</li>
-  <li>item4</li>
-  <li>item5</li>
-  <li>item6</li>
-</ul>
