feat: example product ngTemlpateOutlet

--- a/src/app/ExampleModule/ProductList/product-list.comp.css
+++ b/src/app/ExampleModule/ProductList/product-list.comp.css
@@ -1,6 +1,21 @@
-p{
-    color: blueviolet;
+p {
+  color: blueviolet;
 }
-table{
-
+.table td {
+  vertical-align: baseline;
+}
+table thead {
+  font-size: 24px;
+  line-height: 28px;
+}
+tbody,
+tbody input {
+  font-size: 18px;
+  line-height: 22px;
+}
+input[type="checkbox"]{
+    background-color: transparent;
+}
+input[type="checkbox"]::after {
+  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
 }
